fixed jQuery issue on mobile devices

--- a/css/body.css
+++ b/css/body.css
@@ -4,7 +4,7 @@ h3 {
 
 #mapcontainer{
     width: 100%;
-    max-width: 700px;
+    max-width: 750px;
     margin: auto;
     margin-top: 20px;
 }
